applauncherd (3.0.1) unstable; urgency=low

  * Fixes: NB#273361 - Applaucherd is possible to start with wrong parameters
  * Changes: Updated list of libraries to preload
  * Fixes: NB#291089 - Installation of clock application fails when applauncherd daemon stopped
  * Changes: Adds new test for applauncherd re-exec. Checking state of running application when it is updated.
  * Changes: single-instance library writes log messages to syslog instead of stderr
  * Changes: testcases added/fixed for code coverage
  * Changes: Fix python broken pipe randomly happened for Popen
  * Changes: Correct file path and dir path for applications started by booster-m
  * Fixes: NB#295360 - Report extended exit code from applifed/applauncher

 -- Alexey Shilov <alexey.shilov@nokia.com>  Mon, 14 Nov 2011 13:39:38 +0200

applauncherd (2.0.14) unstable; urgency=low

  * Changes: updated some test cases in art-tests and test package dependencies
  * Changes: improve perf test to detect failure

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balarishnan@nokia.com>  Wed, 23 Nov 2011 17:50:32 +0200

applauncherd (2.0.13) stable; urgency=low

  * Fixes: NB#291039 - Integrated version of applauncherd is missing some important test cases
  * Changes: testcases added/fixed for code coverage

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balarishnan@nokia.com>  Tue, 22 Nov 2011 11:27:40 +0200

applauncherd (2.0.12) stable; urgency=low

  * Changes: new test case added for /usr/lib trigger
  * fixes for nightly build test failures

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 11 Nov 2011 14:30:21 +0200

applauncherd (2.0.11) stable; urgency=low

  * Fixes: NB#287488 - Boosted QML application startup time is above requirements

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 09 Nov 2011 14:55:21 +0200

applauncherd (2.0.10) stable; urgency=low

  * Fixes: NB#283676 - running processes are not granted new credentials until restarted